# farisland-metrology

./: .gitignore  Cargo.toml  LICENSE  REFERENCE.md  build.rs
src/: calibration.rs  error.rs  ffi.rs  fitting.rs  geometry.rs  image.rs  lib.rs  profile.rs  uniffi_api.rs
src/gauges/: caliper1d.rs  chamfer.rs  diameter.rs  mod.rs  radius.rs  thread_pitch.rs
tests/: test_calibration.rs  test_fitting.rs  test_gauges.rs  test_geometry.rs  test_profile.rs
