[package]
name = "farisland-metrology"
version = "0.1.0"
edition = "2021"
description = "Language-agnostic metrology gauges for machine-vision measurement (Caliper1D, Diameter, Chamfer, Radius, ThreadPitch)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/far-island/farisland-metrology"
keywords = ["metrology", "measurement", "machine-vision", "gauging", "ffi"]
categories = ["science", "algorithms", "api-bindings"]

[lib]
name = "farisland_metrology"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
cbindgen = "0.27"

[dev-dependencies]
approx = "0.5"

[features]
default = []
ffi-c = []        # enable C ABI exports
ffi-uniffi = []   # enable uniffi bindings

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
